--- a/scrap_lol.ipynb
+++ b/scrap_lol.ipynb
@@ -1420,19 +1420,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 91,
    "id": "a0d697b7",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'X_test' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[90]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      2\u001b[39m modele_charge = joblib.load(\u001b[33m'\u001b[39m\u001b[33mmon_modele_lol.pkl\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# 2. C'est tout ! Il est prêt à l'emploi.\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m# Tu peux faire des prédictions immédiatement\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m prediction = modele_charge.predict(\u001b[43mX_test\u001b[49m)\n\u001b[32m      8\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mModèle chargé et prêt.\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'X_test' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modèle chargé et prêt.\n"
      ]
     }
    ],
@@ -1442,7 +1438,7 @@
     "\n",
     "# 2. C'est tout ! Il est prêt à l'emploi.\n",
     "# Tu peux faire des prédictions immédiatement\n",
-    "prediction = modele_charge.predict(X_test)\n",
+    "prediction = modele_charge.predict(X_teclean_v2)\n",
     "\n",
     "print(\"Modèle chargé et prêt.\")"
    ]
@@ -1457,39 +1453,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "f3b902d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Le rôle prédit est : 4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Marc\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python313\\site-packages\\sklearn\\utils\\validation.py:2742: UserWarning: X has feature names, but HistGradientBoostingClassifier was fitted without feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import polars as pl\n",
     "\n",
     "# 1. Créer les données du nouveau champion (valeurs brutes)\n",
-    "# Assure-toi de mettre TOUTES les colonnes utilisées lors de l'entraînement\n",
+    "# mettre TOUTES les colonnes utilisées lors de l'entraînement\n",
     "nouveau_champ = pl.DataFrame({\n",
-    "    \"hp\": [550],\n",
-    "    \"mp\": [300],\n",
-    "    \"attackdamage\": [60],\n",
-    "    \"armor\": [30],\n",
-    "    \"spellblock\": [30],\n",
-    "    \"spellblockperlevel\": [0.5],\n",
-    "    # ... ajoute toutes les autres colonnes nécessaires ...\n",
+    "    \"AttackRange\": [150],          # Portée\n",
+    "    \"MoveSpeed\": [340],            # Vitesse de déplacement\n",
+    "    \"HP\": [600],                   # Points de vie\n",
+    "    \"HPperLevel\": [85],            # PV par niveau\n",
+    "    \"hpregen\": [6.5],              # Régénération PV\n",
+    "    \"hpregenperlevel\": [0.6],      # Régénération PV par niveau\n",
+    "    \"Armor\": [30],                 # Armure\n",
+    "    \"ArmorperLevel\": [3.5],        # Armure par niveau\n",
+    "    \"AttackDamage\": [60],          # Dégâts d'attaque\n",
+    "    \"AttackDamageperLevel\": [3],   # Dégâts par niveau\n",
+    "    \"attackspeed\": [0.625],        # Vitesse d'attaque\n",
+    "    \"attackspeedperlevel\": [2.5],  # % vitesse d'attaque par niveau\n",
+    "    \"Spellblock\": [30],            # Résistance magique\n",
+    "    \"spellblockperlevel\": [0.5],   # Résistance magique par niveau\n",
+    "    \"Prv_attack\": [5],             # Note d'attaque (ex: 1 à 10)\n",
+    "    \"Prv_defense\": [5],            # Note de défense\n",
+    "    \"Prv_magic\": [5]               # Note de magie\n",
     "})\n",
     "\n",
     "# 2. IMPORTANT : Refaire le Feature Engineering (ta formule magique)\n",
     "# Le modèle a besoin de 'spellblocklvl', pas juste des deux autres séparés\n",
     "nouveau_champ = nouveau_champ.with_columns(\n",
-    "    (pl.col(\"spellblock\") + pl.col(\"spellblockperlevel\") * 9).alias(\"spellblocklvl\")\n",
-    ")\n",
+    "    (pl.col(\"Spellblock\") + pl.col(\"spellblockperlevel\") * 9).alias(\"Spellblock_lvl_10\"),\n",
+    "    (pl.col(\"attackspeed\") + pl.col(\"attackspeedperlevel\") * 9).alias(\"attackspeed_lvl_10\"),\n",
+    "    (pl.col(\"AttackDamage\") + pl.col(\"AttackDamageperLevel\") * 9).alias(\"AttackDamage_lvl_10\"),\n",
+    "    (pl.col(\"Armor\") + pl.col(\"ArmorperLevel\") * 9).alias(\"Armor_lvl_10\"),\n",
+    "    (pl.col(\"hpregen\") + pl.col(\"hpregenperlevel\") * 9).alias(\"hpregen_lvl_10\"),\n",
+    "    (pl.col(\"HP\") + pl.col(\"HPperLevel\") * 9).alias(\"hp_lvl_10\"))\n",
+    "\n",
+    "nouveau_champ = nouveau_champ.drop([\"spellblockperlevel\", \"attackspeedperlevel\", \"AttackDamageperLevel\", \"ArmorperLevel\", \"hpregenperlevel\", \"HPperLevel\"])\n",
     "\n",
     "# 3. On sélectionne les colonnes finales dans le bon ordre (celui du X_train)\n",
-    "cols_entrainement = [\"hp\", \"mp\", \"attackdamage\", \"armor\", \"spellblocklvl\"] # Exemple, mets ta vraie liste\n",
+    "cols_entrainement = ['AttackRange', 'MoveSpeed', 'HP', 'hpregen', 'Armor', 'AttackDamage', 'attackspeed', 'Spellblock', 'Prv_attack', 'Prv_defense', 'Prv_magic', 'Spellblock_lvl_10', 'attackspeed_lvl_10', 'AttackDamage_lvl_10', 'Armor_lvl_10', 'hpregen_lvl_10', 'hp_lvl_10'] # Exemple, mets ta vraie liste\n",
     "X_nouveau = nouveau_champ.select(cols_entrainement)\n",
     "\n",
     "# 4. Prédiction\n",
     "resultat = modele_charge.predict(X_nouveau)\n",
     "\n",
     "print(f\"Le rôle prédit est : {resultat[0]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f901d606",
+   "metadata": {},
+   "source": [
+    "traduction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "5ccbcbc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L'IA pense que c'est un : Support\n"
+     ]
+    }
+   ],
+   "source": [
+    "# À adapter selon ton encodage du début (LabelEncoder)\n",
+    "roles_mapping = {\n",
+    "    0: \"Top\",\n",
+    "    1: \"Jungle\",\n",
+    "    2: \"Mid\",\n",
+    "    3: \"ADC (Bot)\",\n",
+    "    4: \"Support\",\n",
+    "    5: \"Autre/Tank\"\n",
+    "}\n",
+    "\n",
+    "role_texte = roles_mapping[resultat[0]]\n",
+    "print(f\"L'IA pense que c'est un : {role_texte}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04e5a2aa",
+   "metadata": {},
+   "source": [
+    "si j'utilise un fichier .csv avec plusieurs champions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb899fe8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Charger le nouveau fichier\n",
+    "df_new = pl.read_csv(\"nouveaux_champions.csv\")\n",
+    "\n",
+    "# 2. Recréer la colonne calculée (toujours !)\n",
+    "df_new = df_new.with_columns(\n",
+    "    (pl.col(\"spellblock\") + pl.col(\"spellblockperlevel\") * 9).alias(\"spellblocklvl\")\n",
+    ")\n",
+    "\n",
+    "# 3. Prédire\n",
+    "preds = modele_charge.predict(df_new.select(cols_entrainement))\n",
+    "\n",
+    "# 4. Ajouter la prédiction au tableau et sauvegarder\n",
+    "df_final = df_new.with_columns(pl.Series(\"Role_Predit\", preds))\n",
+    "df_final.write_csv(\"resultats_ia.csv\")"
    ]
   }
  ],
