mais c'est fini carrément

--- a/scrap_lol.ipynb
+++ b/scrap_lol.ipynb
@@ -1,16 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "4febadd4",
-   "metadata": {},
-   "source": [
-    "on va tenter de scrapp le wiki fandom "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "126e0de0",
    "metadata": {},
    "outputs": [],
@@ -22,15 +14,23 @@
     "import time\n",
     "import polars as pl\n",
     "from sklearn.model_selection import train_test_split\n",
-    "import seaborn as sns"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a948889c",
-   "metadata": {},
-   "source": [
-    "On va essayer d'avoir tout les noms de champ d'un coup"
+    "import seaborn as sns\n",
+    "import joblib\n",
+    "from sklearn.dummy import DummyRegressor\n",
+    "from sklearn.linear_model import LinearRegression, Lasso, Ridge, ElasticNet\n",
+    "from sklearn.svm import SVR\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.gaussian_process import GaussianProcessRegressor\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
+    "from sklearn.neural_network import MLPRegressor\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "import pandas as pd\n",
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.ensemble import HistGradientBoostingClassifier"
    ]
   },
   {
@@ -292,26 +292,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7b076404",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.dummy import DummyRegressor\n",
-    "from sklearn.linear_model import LinearRegression, Lasso, Ridge, ElasticNet\n",
-    "from sklearn.svm import SVR\n",
-    "from sklearn.neighbors import KNeighborsRegressor\n",
-    "from sklearn.gaussian_process import GaussianProcessRegressor\n",
-    "from sklearn.tree import DecisionTreeRegressor\n",
-    "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
-    "from sklearn.neural_network import MLPRegressor\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "import pandas as pd\n",
-    "from sklearn.cluster import KMeans"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "f3ebbd51",
    "metadata": {},
@@ -501,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "bf63bb35",
    "metadata": {},
    "outputs": [
@@ -523,9 +503,8 @@
     }
    ],
    "source": [
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score, confusion_matrix\n",
-    "import pandas as pd\n",
+    "\n",
+    "\n",
     "\n",
     "# 1. Création du modèle\n",
     "# n_estimators=100 : On plante 100 arbres de décision\n",
@@ -761,8 +740,6 @@
     }
    ],
    "source": [
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "# Définir le modèle\n",
     "rf = RandomForestClassifier()\n",
@@ -1267,7 +1244,7 @@
     }
    ],
    "source": [
-    "from sklearn.ensemble import HistGradientBoostingClassifier\n",
+    "\n",
     "\n",
     "# 1. Création du modèle\n",
     "hgb = HistGradientBoostingClassifier(\n",
@@ -1296,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "e3b5751d",
    "metadata": {},
    "outputs": [
@@ -1312,9 +1289,6 @@
     }
    ],
    "source": [
-    "from sklearn.ensemble import HistGradientBoostingClassifier\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "\n",
     "# 1. Définir le modèle de base\n",
     "# On active 'balanced' pour aider tes classes 3, 4 et 5\n",
     "hgb = HistGradientBoostingClassifier(class_weight='balanced', random_state=42)\n",
@@ -1400,7 +1374,7 @@
     }
    ],
    "source": [
-    "import joblib\n",
+    "\n",
     "\n",
     "# 'mon_modele_lol.pkl' est le nom du fichier qui sera créé sur ton disque\n",
     "# Tu peux choisir le nom que tu veux\n",
@@ -1453,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "id": "f3b902d0",
    "metadata": {},
    "outputs": [
@@ -1474,8 +1448,6 @@
     }
    ],
    "source": [
-    "import polars as pl\n",
-    "\n",
     "# 1. Créer les données du nouveau champion (valeurs brutes)\n",
     "# mettre TOUTES les colonnes utilisées lors de l'entraînement\n",
     "nouveau_champ = pl.DataFrame({\n",
