on rend le bail lisible

--- a/utilisation modèle de prédiction de champ.ipynb
+++ b/utilisation modèle de prédiction de champ.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "00fc9be8",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Modèle chargé et prêt.\n"
+      "Modèle chargé et prêt.\n",
+      "Le modèle de traduction est prêt.\n",
+      "La classe du champion est prête.\n"
      ]
     }
    ],
@@ -84,7 +86,7 @@
     "                 AttackDamageperLevel, attackspeed, attackspeedperlevel, \n",
     "                 Spellblock, spellblockperlevel, Prv_attack, Prv_defense, Prv_magic):\n",
     "        \n",
-    "        # Stockage des données brutes\n",
+    "        # Stockage des données\n",
     "        self.raw_data = {\n",
     "            \"AttackRange\": [AttackRange],\n",
     "            \"MoveSpeed\": [MoveSpeed],\n",
@@ -109,7 +111,7 @@
     "        \"\"\"Transforme les données, calcule les stats au lvl 10 et nettoie les colonnes inutiles\"\"\"\n",
     "        df = pl.DataFrame(self.raw_data)\n",
     "        \n",
-    "        # 1. Calcul des valeurs au niveau 10\n",
+    "        #1. Calcul des stats au niveau 10\n",
     "        df = df.with_columns(\n",
     "            (pl.col(\"Spellblock\") + pl.col(\"spellblockperlevel\") * 9).alias(\"Spellblock_lvl_10\"),\n",
     "            (pl.col(\"attackspeed\") + pl.col(\"attackspeedperlevel\") * 9).alias(\"attackspeed_lvl_10\"),\n",
@@ -119,7 +121,7 @@
     "            (pl.col(\"HP\") + pl.col(\"HPperLevel\") * 9).alias(\"hp_lvl_10\")\n",
     "        )\n",
     "\n",
-    "        # 2. Suppression des colonnes \"per level\" devenues inutiles\n",
+    "        #2. Suppression des colonnes \"per level\"  inutiles\n",
     "        cols_to_drop = [\n",
     "            \"spellblockperlevel\", \n",
     "            \"attackspeedperlevel\", \n",
@@ -139,7 +141,7 @@
    "id": "6714b068",
    "metadata": {},
    "source": [
-    "Création du champ test"
+    "Création du champ test (version manuelle sans classe)"
    ]
   },
   {
@@ -239,7 +241,7 @@
    "id": "b00ffeef",
    "metadata": {},
    "source": [
-    "Création d'une classe \" nouveau champion\""
+    "Création du nouveau champion en utilisant la classe + prédiction"
    ]
   },
   {
@@ -262,12 +264,25 @@
       "│ 175         ┆ 340       ┆ 650 ┆ 3.5     ┆ … ┆ 125         ┆ 61.5        ┆ 8.9        ┆ 1676      │\n",
       "└─────────────┴───────────┴─────┴─────────┴───┴─────────────┴─────────────┴────────────┴───────────┘\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Marc\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python313\\site-packages\\sklearn\\utils\\validation.py:2742: UserWarning: X has feature names, but HistGradientBoostingClassifier was fitted without feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L'IA pense que c'est un combattant\n"
+     ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "# 1. Création du champion\n",
+    "#1. Création du champion\n",
     "nouveau_champ = Statchamp(\n",
     "    AttackRange=175,\n",
     "    MoveSpeed=340,\n",
@@ -280,7 +295,7 @@
     "    AttackDamage=98,\n",
     "    AttackDamageperLevel=3,\n",
     "    attackspeed=0.625,\n",
-    "    attackspeedperlevel=2.5, # Attention : Vérifie si c'est des % (0.025) ou brut (2.5)\n",
+    "    attackspeedperlevel=2.5, \n",
     "    Spellblock=303,\n",
     "    spellblockperlevel=0.5,\n",
     "    Prv_attack=5,\n",
@@ -288,51 +303,22 @@
     "    Prv_magic=5\n",
     ")\n",
     "\n",
-    "# 2. Récupération du tableau propre\n",
+    "#2. Récupération du tableau propre\n",
     "df_pret = nouveau_champ.get_dataframe()\n",
     "\n",
-    "# 3. Affichage\n",
-    "print(df_pret)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0aea70c3",
-   "metadata": {},
-   "source": [
-    "Test de a prédiction "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "4e8f0123",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "L'IA pense que c'est un combattant\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Marc\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python313\\site-packages\\sklearn\\utils\\validation.py:2742: UserWarning: X has feature names, but HistGradientBoostingClassifier was fitted without feature names\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Prédiction\n",
+    "#3. Affichage\n",
+    "print(df_pret)\n",
+    "\n",
+    "#-----------\n",
+    "\n",
+    "#4. Prédiction\n",
     "resultat = modele_charge.predict(df_pret)\n",
     "\n",
     "#print(f\"Le rôle prédit est : {resultat[0]}\")\n",
-    "#Traduction\n",
+    "#5. Traduction\n",
     "role_texte = roles_mapping[resultat[0]]\n",
     "\n",
+    "#6. c'est bon gros parle\n",
     "print(f\"L'IA pense que c'est un {role_texte}\")\n"
    ]
   }
