--- a/Récupération et prédiction de champ.ipynb
+++ b/Récupération et prédiction de champ.ipynb
@@ -132,13 +132,17 @@
     "\n",
     "    #4. Créer le Tableau + Polars\n",
     "    tableau_champ = pl.DataFrame(rows)\n",
+    "    \n",
+    "    \n",
     "\n",
     "    # Affichage \n",
     "    pl.Config.set_tbl_rows(10) \n",
     "    print(tableau_champ)\n",
+    "    #suuuuuper important pour la suite sinon c'est ko\n",
+    "    return tableau_champ\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    get_lol_champions()"
+    "    tableau_champ = get_lol_champions()"
    ]
   },
   {
@@ -368,7 +372,9 @@
     "    { str(modele): scores for modele, scores in  resultat.items()}\n",
     ")\n",
     "\n",
-    "resultatdf"
+    "resultatdf\n",
+    "\n",
+    "print(resultatdf.mean())"
    ]
   },
   {
