changement de pc (bu)

--- a/Récupération et prédiction de champ.ipynb
+++ b/Récupération et prédiction de champ.ipynb
@@ -244,9 +244,9 @@
     "colonnes_texte = [name for name, dtype in tableau_ml.schema.items() if dtype == pl.String]\n",
     "\n",
     "if len(colonnes_texte) > 0:\n",
-    "    print(f\"\\n⚠️ Attention ! Il reste du texte dans : {colonnes_texte}\")\n",
+    "    print(f\"\\n Attention ! Il reste du texte dans : {colonnes_texte}\")\n",
     "else:\n",
-    "    print(\"\\n✅ Parfait ! Toutes les colonnes sont numériques. Ton IA peut travailler.\")"
+    "    print(\"\\n Parfait ! Toutes les colonnes sont numériques. Ton IA peut travailler.\")"
    ]
   },
   {
